--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ deploy:
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
     branch: master
-  local_dir: ./build/output
+  local_dir: ./build
   #keep-history: true
